add sql unit test